# dagster-monorepo-example

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
_deployment/: Dockerfile  dagster.yaml  pyproject.toml  requirements.txt  workspace.yaml
_localstack/: dagster.yaml  local_stack.sh  ucr-entrypoint.sh
dagster-utils/: pyproject.toml  requirements.txt
dagster-utils/dagster_utils/dagsterhub/: __init__.py  io_managers.py  sensors.py
dagster-utils/dagster_utils/lib/: __init__.py  _base_google_api.py  gsheets.py  types.py
dagster-utils/dagster_utils_tests/lib/: conftest.py  test_gsheets.py  test_types.py
dagster-utils/dagster_utils_tests/lib/_stubs/gsheets/: some_id.csv
some-dagster-project/: Dockerfile  pyproject.toml
some-dagster-project/some_dagster_project/: __init__.py  resource_defs.py
some-dagster-project/some_dagster_project/assets/: some_asset.py  some_gsheets_asset.py
some-dagster-project/some_dagster_project/configs/: some_config.yaml  some_gsheets_config.yaml
some-dagster-project/some_dagster_project_tests/: conftest.py
some-dagster-project/some_dagster_project_tests/assets/: test_gsheets_asset.py  test_some_asset.py
