[tool.poetry]
name = "dagster-deployment"
version = "0.1.0"
description = ""
authors = ["Vinnie <vdalpiccol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dagit = "^1.1.7"
dagster = "^1.1.7"
dagster-aws = "^0.17.7"
dagster-postgres = "^0.17.7"
dagster-slack = "^0.17.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
