[tool.poetry]
name = "dagster-utils"
version = "0.1.0"
description = "Utils for working with dagster."
authors = ["Vinnie <vdalpiccol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.30"
dagster = "^1.1.7"
dagster-aws = "^0.17.7"
dagster-postgres = "^0.17.7"
dagster-slack = "^0.17.7"
pandas = "^1.4.3"
snowflake-sqlalchemy = "^1.4.5"
sqlalchemy = "1.4.45"
pyarrow = "^8.0.0"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
dagit = "^1.1.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
isort = "^5.10.1"
moto = "^4.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
